@@ -99,8 +99,10 @@ int ftp_gethostaddr(int fd);
 void ftp_histf(char *fmt, ...);
 void ftp_hist(char *line);
 
+#ifdef ENABLE_TRANSFER_RATE
 static void _ftp_update_transfer(char *fmt, long got, long *cur,
 				 int old_sec, int new_sec);
+#endif
 
 
 
@@ -887,28 +889,46 @@ ftp_cwd(char *path)
 int
 ftp_cat(FILE *fin, FILE *fout, long start, long size)
 {
-    struct itimerval itv;
     char buf[4096], fmt[4096];
     int c, n, err;
-    long got, cur[4];
+    long got;
+#ifdef ENABLE_TRANSFER_RATE
+    struct itimerval itv;
+    long cur[4];
     int old_alarm;
+#else
+    time_t oldt, newt;
+#endif
 
-
-    if (size >= 0)
+    if (size >= 0) {
+#ifdef ENABLE_TRANSFER_RATE
 	sprintf(fmt, "transferred %%ld/%ld "
 		"(total: %%.2fkb/s, current: %%.2fkb/s)",
 		size);
-    else
+#else
+	sprintf(fmt, "transferred %%ld/%ld", size);
+#endif
+    }
+    else {
+#ifdef ENABLE_TRANSFER_RATE
 	strcpy(fmt, "transferred %ld (total: %%.2fkb/s, current: %%.2fkb/s)");
+#else
+	strcpy(fmt, "transferred %ld");
+#endif
+    }
 
     got = start;
+    signal(SIGINT, sig_remember);
+
+#ifdef ENABLE_TRANSFER_RATE
     cur[0] = cur[1] = cur[2] = cur[3] = 0;
     old_alarm = sig_alarm = sig_intr = 0;
-
-    signal(SIGINT, sig_remember);
     itv.it_value.tv_sec = itv.it_interval.tv_sec = 1;
     itv.it_value.tv_usec = itv.it_interval.tv_usec = 0;
     setitimer(ITIMER_REAL, &itv, NULL);
+#else
+    oldt = 0;
+#endif
 
     if (ftp_curmode == 'i')
 	while ((n=fread(buf, 1, 4096, fin)) > 0) {
@@ -918,11 +938,18 @@ ftp_cat(FILE *fin, FILE *fout, long start, long size)
 		break;
 	    }
 	    got += n;
+#ifdef ENABLE_TRANSFER_RATE
 	    if (old_alarm != sig_alarm) {
 		_ftp_update_transfer(fmt, got-start, cur,
 				     old_alarm, sig_alarm);
 		old_alarm = sig_alarm;
 	    }
+#else
+	    if ((newt=time(NULL)) != oldt) {
+		disp_status(fmt, got);
+		oldt = newt;
+	    }
+#endif
 	}
     else
 	while ((c=getc(fin)) != EOF) {
@@ -940,17 +967,26 @@ ftp_cat(FILE *fin, FILE *fout, long start, long size)
 	    if (ferror(fout))
 		break;
 
+#ifdef ENABLE_TRANSFER_RATE
 	    if (old_alarm != sig_alarm) {
 		_ftp_update_transfer(fmt, got-start, cur,
 				     old_alarm, sig_alarm);
 		old_alarm = sig_alarm;
 	    }
+#else
+	    if (got%512 == 0 && (newt=time(NULL)) != oldt) {
+		disp_status(fmt, got);
+		oldt = newt;
+	    } 
+#endif
 	}
 
     signal(SIGINT, sig_end);
+#ifdef ENABLE_TRANSFER_RATE
     itv.it_value.tv_sec = itv.it_interval.tv_sec = 0;
     itv.it_value.tv_usec = itv.it_interval.tv_usec = 0;
     setitimer(ITIMER_REAL, &itv, NULL);
+#endif
 
     if (ferror(fin) || sig_intr) {
 	errno = 0;
@@ -971,6 +1007,7 @@ ftp_cat(FILE *fin, FILE *fout, long start, long size)
 
 
 
+#ifdef ENABLE_TRANSFER_RATE
 static void
 _ftp_update_transfer(char *fmt, long got, long *cur, int old_sec, int new_sec)
 {
@@ -1007,6 +1044,7 @@ _ftp_update_transfer(char *fmt, long got, long *cur, int old_sec, int new_sec)
     disp_status(fmt, got, got/(float)(new_sec*1024),
 		(cur[3]-cur[0])/((float)3*1024));
 }
+#endif /* ENABLE_TRANSFER_RATE */
 
 
 
